<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FinalProjectActivity!</string>
    <string name="app_name">FinalProject</string>
    
	<!--     Main menu options -->
    <string name="weather">Weather</string>
    <string name="battery">Battery log </string>
    <string name="mail">Send a mail</string>

    
    
    <string name="temp">Temp.</string>
    <string name="humidity">Hum.</string>
    <string name="windDirection">Wind</string>
    <string name="windSpeed">Speed</string>
    <string name="visibility">Vis.</string>
    <string name="pressure">Press.</string>
    
    <string name="maxTemp">Max.</string>
    <string name="minTemp">Min.</string>
    
    <string name="mailSubject">Android Battery Log</string>
    

</resources>