<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <Button
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:layout_width="fill_parent"
        android:textSize="35dp"
        android:gravity="center_horizontal|center"
        android:text="@string/weather"
        android:background="@drawable/home_button_selector"
        android:textColor="@android:color/white"
        android:layout_marginBottom="2dp"
        android:onClick="showWeather"
        />
        
       
      
    <Button 
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:layout_width="fill_parent"
        android:textSize="35dp"
        android:gravity="center_horizontal|center"
        android:text="@string/battery"
        android:background="@drawable/home_button_selector"
        android:textColor="@android:color/white"
		android:paddingBottom="5dp"
		android:layout_marginBottom="2dp"
		android:onClick="showBattery"
    />
    
    <Button
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:layout_width="fill_parent"
        android:textSize="35dp"
        android:gravity="center_horizontal|center"
        android:text="@string/mail"
        android:textColor="@android:color/white"
        android:background="@drawable/home_button_selector"
        android:onClick="sendMail"
    />
    
</LinearLayout>